fix: Overflow scrolling for editor view

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -78,11 +78,6 @@ main .content {
   align-items: stretch;
 }
 
-.CodeMirror {
-  min-height: 100%;
-  font-size: 16px;
-}
-
 button.login {
   border-radius: 50%;
   width: 40px;
