--- a/src/js/react/components/AnnotationEditorCodeMirror.scss
+++ b/src/js/react/components/AnnotationEditorCodeMirror.scss
@@ -1,3 +1,8 @@
+.CodeMirror {
+    min-height: 100%;
+    font-size: 16px;
+    overflow: auto;
+}
 
 // Alternative 1
 
